--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     </li>
                     <li class="soft-skills-item"><span class="soft-skills-item-text">Hardworking</span>
                     </li>
-                    <li class="soft-skills-item"><span class="soft-skills-item-text">Ready To Lear</span>
+                    <li class="soft-skills-item"><span class="soft-skills-item-text">Alwats ready To Lear</span>
                     </li>
                 </ul>
             </div>
